add projects, mobile design

--- a/index.html
+++ b/index.html
@@ -78,19 +78,84 @@
       <ol class="project-list">
         <li class="project-list__item project-list__item--wide">
           <h3 class="project__title">Werkweek</h3>
-          <img
-            class="project__image"
-            src="img/Screenshot.png"
-            alt="Werkweek screenshot"
-          />
+          <div class="image-container">
+            <div class="image-mouseover">
+              <div class="image-mouseover__column">
+                <p class="image-mouseover__description">
+                  An app to help manage time. Set alarms, countdowns, and more
+                  to help track your day (or week).
+                </p>
+                <div class="image-mouseover__row">
+                  <a
+                    class="image-mouseover__link"
+                    href="https://nspenner.github.io/werkweek"
+                    target="_blank"
+                    >View Project</a
+                  >
+                  <a
+                    class="image-mouseover__link image-mouseover__link--outline"
+                    href="https://github.com/nspenner/werkweek"
+                    target="_blank"
+                    >View Source</a
+                  >
+                </div>
+              </div>
+              <div class="image-mouseover__column">
+                <ul class="image-mouseover__technology-list image-mouseover__technology-list--large">
+                  <li>HTML5</li>
+                  <li>CSS</li>
+                  <li>React</li>
+                </ul>
+              </div>
+            </div>
+            <img
+              class="project__image"
+              src="img/Screenshot.png"
+              alt="Werkweek screenshot"
+            />
+          </div>
         </li>
         <li class="project-list__item">
           <h3 class="project__title">Nomo</h3>
-          <img
-            class="project__image"
-            src="img/nomo.png"
-            alt="Nomo screenshot"
-          />
+          <div class="image-container">
+            <div class="image-mouseover image-mouseover--vertical">
+              <div class="image-mouseover__column">
+                <p class="image-mouseover__description">
+                  A no-nonsense metronome utilizing the Web Audio API to keep
+                  accurate time and update dynamically.
+                </p>
+                <div class="image-mouseover__row">
+                  <a
+                    class="image-mouseover__link"
+                    href="https://nspenner.github.io/nomo/"
+                    target="_blank"
+                    >View Project</a
+                  >
+                  <a
+                    class="image-mouseover__link image-mouseover__link--outline"
+                    href="https://github.com/nspenner/nomo"
+                    target="_blank"
+                    >View Source</a
+                  >
+                </div>
+              </div>
+              <div
+                class="image-mouseover__column image-mouseover__column--full"
+              >
+                <ul
+                  class="image-mouseover__technology-list image-mouseover__technology-list--horizontal"
+                >
+                  <li>Vue</li>
+                  <li>Web Audio API</li>
+                </ul>
+              </div>
+            </div>
+            <img
+              class="project__image"
+              src="img/nomo.png"
+              alt="Nomo screenshot"
+            />
+          </div>
         </li>
         <li class="project-list__item">
           <h3
@@ -98,27 +163,129 @@
           >
             match-css
           </h3>
-          <img
-            class="project__image"
-            src="img/demo.gif"
-            alt="Demo of create matching css utility for Visual Studio Code"
-          />
+          <div class="image-container">
+            <div class="image-mouseover image-mouseover--vertical">
+              <div class="image-mouseover__column">
+                <p class="image-mouseover__description">
+                  A Visual Studio Code utility to save time when developing web
+                  pages/components.
+                </p>
+                <div class="image-mouseover__row">
+                  <a
+                    class="image-mouseover__link"
+                    href="https://marketplace.visualstudio.com/items?itemName=NathanMinchow.create-matching-css-file"
+                    target="_blank"
+                    >View Project</a
+                  >
+                  <a
+                    class="image-mouseover__link image-mouseover__link--outline"
+                    href="https://github.com/nspenner/create-matching-css-vscode"
+                    target="_blank"
+                    >View Source</a
+                  >
+                </div>
+              </div>
+              <div
+                class="image-mouseover__column image-mouseover__column--full"
+              >
+                <ul
+                  class="image-mouseover__technology-list image-mouseover__technology-list--horizontal"
+                >
+                  <li>TypeScript</li>
+                </ul>
+              </div>
+            </div>
+            <img
+              class="project__image"
+              src="img/demo.gif"
+              alt="Demo of create matching css utility for Visual Studio Code"
+            />
+          </div>
         </li>
         <li class="project-list__item">
           <h3 class="project__title project__title--right">Dark Mode</h3>
-          <img
-            class="project__image"
-            src="img/darkmode.gif"
-            alt="Demo of dark mode toggle using CSS Custom Properties"
-          />
+          <div class="image-container">
+            <div class="image-mouseover image-mouseover--vertical">
+              <div class="image-mouseover__column">
+                <p class="image-mouseover__description">
+                  An implementation of dark mode in a site template using
+                  <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/--*"
+                    >CSS Custom Properties</a
+                  >. I also wrote
+                  <a
+                    href="https://dev.to/nathanminchow/easy-website-themes-with-css-custom-properties-1pb7"
+                    >an article</a
+                  >
+                  about the power of CSS variables in theme customization.
+                </p>
+                <div class="image-mouseover__row">
+                  <a
+                    class="image-mouseover__link"
+                    href="https://nspenner.github.io/theme-lab/"
+                    target="_blank"
+                    >View Project</a
+                  >
+                  <a
+                    class="image-mouseover__link image-mouseover__link--outline"
+                    href="https://github.com/nspenner/theme-lab"
+                    target="_blank"
+                    >View Source</a
+                  >
+                </div>
+              </div>
+              <div
+                class="image-mouseover__column image-mouseover__column--full"
+              >
+                <ul
+                  class="image-mouseover__technology-list image-mouseover__technology-list--horizontal"
+                >
+                  <li>HTML5</li>
+                  <li>CSS</li>
+                  <li>JS</li>
+                </ul>
+              </div>
+            </div>
+            <img
+              class="project__image"
+              src="img/darkmode.gif"
+              alt="Demo of dark mode toggle using CSS Custom Properties"
+            />
+          </div>
         </li>
         <li class="project-list__item">
           <h3 class="project__title project__title--bottom">Gradient Todo</h3>
-          <img
-            class="project__image"
-            src="img/todo.png"
-            alt="Gradient todo screenshot"
-          />
+          <div class="image-container">
+            <div class="image-mouseover image-mouseover--vertical">
+              <div class="image-mouseover__column">
+                <p class="image-mouseover__description">
+                  A tiny frontend for a Todo app utilizing CSS gradients and
+                  pseudo-elements to achieve a dynamic gradient background.
+                </p>
+                <a
+                  class="image-mouseover__link"
+                  href="https://codepen.io/nathanspenner/pen/ZEEKMYN"
+                  target="_blank"
+                  >View Project</a
+                >
+              </div>
+              <div
+                class="image-mouseover__column image-mouseover__column--full"
+              >
+                <ul
+                  class="image-mouseover__technology-list image-mouseover__technology-list--horizontal"
+                >
+                  <li>HTML5</li>
+                  <li>CSS</li>
+                  <li>JS</li>
+                </ul>
+              </div>
+            </div>
+            <img
+              class="project__image"
+              src="img/todo.png"
+              alt="Gradient todo screenshot"
+            />
+          </div>
         </li>
       </ol>
     </div>
