Add extra background lines

--- a/index.html
+++ b/index.html
@@ -289,6 +289,15 @@
         </li>
       </ol>
     </div>
+    <div role="presentation" class="positioned">
+      <div class="background-lines background-lines--alt">
+        <div class="background-lines__line"></div>
+        <div class="background-lines__line"></div>
+        <div class="background-lines__line"></div>
+        <div class="background-lines__line"></div>
+        <div class="background-lines__line"></div>
+      </div>
+    </div>
     <div class="content-container cl-effect-7">
       <div class="row">
         <div class="list-container">
