--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="theme-color" content="#2a2d34" />
+    <meta name="theme-color" content="#343f5e" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -110,7 +110,7 @@
             </div>
             <img
               class="project__image"
-              src="img/Screenshot.png"
+              src="img/werkweek.png"
               alt="Werkweek screenshot"
             />
           </div>
