--- a/index.html
+++ b/index.html
@@ -55,16 +55,22 @@
         </p>
       </div>
     </div>
-    <div class="text-container">
-      <h2 class="text">Projects</h2>
-      <div role="presentation" class="bar bar--1"></div>
-      <div role="presentation" class="bar bar--2"></div>
-      <div role="presentation" class="bar bar--3"></div>
-      <div role="presentation" class="bar bar--4"></div>
-      <div role="presentation" class="bar bar--5"></div>
-      <div role="presentation" class="vertical-bar vertical-bar--left"></div>
-      <div role="presentation" class="vertical-bar vertical-bar--accent"></div>
+    <div class="project-title-container">
+      <div class="text-container">
+        <h2 class="text">Projects</h2>
+        <div role="presentation" class="bar bar--1"></div>
+        <div role="presentation" class="bar bar--2"></div>
+        <div role="presentation" class="bar bar--3"></div>
+        <div role="presentation" class="bar bar--4"></div>
+        <div role="presentation" class="bar bar--5"></div>
+        <div role="presentation" class="vertical-bar vertical-bar--left"></div>
+        <div
+          role="presentation"
+          class="vertical-bar vertical-bar--accent"
+        ></div>
+      </div>
     </div>
+
     <div role="presentation" class="positioned">
       <div class="background-lines">
         <div class="background-lines__line"></div>
@@ -101,7 +107,9 @@
                 </div>
               </div>
               <div class="image-mouseover__column">
-                <ul class="image-mouseover__technology-list image-mouseover__technology-list--large">
+                <ul
+                  class="image-mouseover__technology-list image-mouseover__technology-list--large"
+                >
                   <li>HTML5</li>
                   <li>CSS</li>
                   <li>React</li>
