--- a/pages/resume/resume.html
+++ b/pages/resume/resume.html
@@ -11,7 +11,7 @@
     <a
       class="download-link"
       download="Nathan_Minchow_Resume.pdf"
-      href="../../doc/resume2020.pdf"
+      href="../../doc/Nathan_Minchow_Resume_2024.pdf"
       >Download</a
     >
     <main>
@@ -28,7 +28,8 @@
         <h1>Objective</h1>
         <p>
           Obtain a full-time position in the web development field where I can
-          use my skills in software development, design, and user experience.
+          use my skills in software development, design, and user experience
+          with a focus on user experience and accessibility.
         </p>
       </section>
       <section class="content-section">
@@ -46,7 +47,7 @@
               Present
             </h2>
             <div>
-              <span class="italic-text">Silverline</span> | Omaha, Nebraska
+              <span class="italic-text">Silverline</span> | Atlanta, Georgia
             </div>
             <ul>
               <li>
@@ -56,12 +57,10 @@
               <li>
                 Collaborated on projects with teams across the US and overseas
               </li>
+              <li>Designed and developed custom user interfaces</li>
               <li>
-                Designed and developed custom user interfaces
-              </li>
-              <li>
-                Developed, tested, and deployed client solutions in healthcare
-                and financial services industry
+                Developed, tested, and deployed client solutions in healthcare,
+                financial services, and media industries
               </li>
             </ul>
           </div>
@@ -73,12 +72,10 @@
             <div><span class="italic-text">Garmin</span> | Olathe, Kansas</div>
             <ul>
               <li>
-                Designed and developed a React application to streamline
+                Designed and developed React applications to streamline
                 localization processes
               </li>
-              <li>
-                Fixed bugs in company software
-              </li>
+              <li>Fixed bugs in company software</li>
               <li>
                 Ensured cross-browser compatibility in features and solutions
               </li>
@@ -126,15 +123,9 @@
                 Created web application to help visualize, manage, and utilize
                 agricultural data
               </li>
-              <li>
-                Built maintainable and reusable components in Angular2+
-              </li>
-              <li>
-                Wrote unit tests to ensure reliability
-              </li>
-              <li>
-                Designed database schema based on client needs
-              </li>
+              <li>Built maintainable and reusable components in Angular2+</li>
+              <li>Wrote unit tests to ensure reliability</li>
+              <li>Designed database schema based on client needs</li>
               <li>
                 Consulted with sponsor to garner feedback and adapt to new
                 requirements
@@ -148,25 +139,18 @@
           <section>
             <h1>Honors and Organizations</h1>
             <ul>
-              <li>Raikes Design Studio Platinum Project</li>
+              <li>Dreamforce Speaker 2022–2023</li>
+              <li>Raikes Design Studio Platinum Project Member</li>
               <li>UNL Initialize Founding Member</li>
-              <li>UNL Deans List (2015 – 2019)</li>
-              <li>
-                UNL Computer Science and Engineering Honors Program Student
-              </li>
             </ul>
           </section>
           <section>
             <h1>Skills</h1>
             <ul>
-              <li>
-                Most experience with JavaScript/Node, HTML, CSS, and Java
-              </li>
-              <li>
-                Experience with React, Vue, and Express
-              </li>
+              <li>Most experience with JavaScript, HTML, CSS</li>
+              <li>Experience with React, Vue, Svelte, and Express</li>
               <li>Experience with PostgreSQL and MongoDB</li>
-              <li>Experience with Adobe XD / Figma / Sketch</li>
+              <li>Experience with Figma / Sketch</li>
             </ul>
           </section>
         </div>
