--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <p class="cl-effect-7">
           I have extensive experience in web development at companies like
           Garmin, Nelnet, and Bloomberg. More details are on my
-          <a target="_blank" href="doc/Resume2021.pdf">resume</a>.
+          <a target="_blank" href="doc/Nathan_Minchow_Resume_2024.pdf">resume</a>.
         </p>
         <p>To see more of my work, take a look at my projects below.</p>
         <p class="cl-effect-7">
