--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
               <a target="_blank" href="https://dev.to/nathanminchow">DEV.to</a>
             </li>
             <li class="link-list__item">
-              <a target="_blank" href="doc/Resume2021.pdf">Resume</a>
+              <a target="_blank" href="doc/Nathan_Minchow_Resume_2024.pdf">Resume</a>
             </li>
           </ul>
         </div>
