--- a/pages/resume/resume.html
+++ b/pages/resume/resume.html
@@ -43,7 +43,7 @@
         <div class="multicolumn">
           <div class="experience-container">
             <h2>
-              <span class="heavy-text">Software Developer</span> June 2019 –
+              <span class="heavy-text">Senior Software Developer</span> June 2019 –
               Present
             </h2>
             <div>
@@ -51,13 +51,13 @@
             </div>
             <ul>
               <li>
-                Developed accessible, responsive Web Components to meet client
+                Developed accessible, responsive Lightning Web Components to meet client
                 needs
               </li>
               <li>
                 Collaborated on projects with teams across the US and overseas
               </li>
-              <li>Designed and developed custom user interfaces</li>
+              <li>Architected and implemented solutions in Salesforce CRM, Experience Cloud, and Marketing Cloud</li>
               <li>
                 Developed, tested, and deployed client solutions in healthcare,
                 financial services, and media industries
@@ -145,12 +145,12 @@
             </ul>
           </section>
           <section>
-            <h1>Skills</h1>
+            <h1>Skills and Certifications</h1>
             <ul>
-              <li>Most experience with JavaScript, HTML, CSS</li>
-              <li>Experience with React, Vue, Svelte, and Express</li>
-              <li>Experience with PostgreSQL and MongoDB</li>
-              <li>Experience with Figma / Sketch</li>
+              <li>Experience with JavaScript, HTML, and CSS</li>
+              <li>Certified Salesforce Platform Developer, Salesforce Javascript Developer, Omnistudio Developer, and Marketing Cloud Personalization Accredited Professional</li>
+              <li>Experience with Lightning Web Components, React, and Express frameworks</li>
+              <li>Experience with Figma</li>
             </ul>
           </section>
         </div>
