--- a/pages/resume/resume.html
+++ b/pages/resume/resume.html
@@ -28,36 +28,36 @@
         <h1>Objective</h1>
         <p>
           Obtain a full-time position in the web development field where I can
-          use my skills in software development, design, and user experience
-          with a focus on user experience and accessibility.
+          use my skills in software development and design with a focus on user
+          experience and accessibility.
         </p>
       </section>
       <section class="content-section">
         <h1>Education</h1>
         <div>University of Nebraska – Lincoln</div>
-        <div>Bachelor of Science in Computer Science</div>
-        <div>GPA: 3.99 / 4.0</div>
+        <div>Bachelor of Science in Computer Science, with High Distinction</div>
       </section>
       <section class="content-section">
         <h1>Experience</h1>
         <div class="multicolumn">
           <div class="experience-container">
             <h2>
-              <span class="heavy-text">Software Developer</span> June 2019 –
+              <span class="heavy-text">Senior Software Developer (UI and Frontend)</span> June 2019 –
               Present
             </h2>
             <div>
-              <span class="italic-text">Silverline</span> | Atlanta, Georgia
+              <span class="italic-text">Mphasis Silverline</span> | Atlanta, Georgia
             </div>
             <ul>
+              <li>
+                Led development teams across the US and overseas for client projects
+              </li>
               <li>
                 Developed accessible, responsive Web Components to meet client
                 needs
               </li>
-              <li>
-                Collaborated on projects with teams across the US and overseas
-              </li>
-              <li>Designed and developed custom user interfaces</li>
+              <li>Designed custom user interfaces and design systems in Figma</li>
+              <li>Streamlined design to development handoff process by establishing consistent design tokens and guidelines</li>
               <li>
                 Developed, tested, and deployed client solutions in healthcare,
                 financial services, and media industries
@@ -75,13 +75,12 @@
                 Designed and developed React applications to streamline
                 localization processes
               </li>
-              <li>Fixed bugs in company software</li>
+              <li>Fixed bugs in company's fitness-tracking web solution</li>
               <li>
-                Ensured cross-browser compatibility in features and solutions
+                Ensured cross-browser compatibility in existing products
               </li>
               <li>
-                Consulted with team members and provided feedback on features
-                and best practices
+                Conducted UX sessions to gather feedback on new and existing features
               </li>
             </ul>
           </div>
@@ -124,8 +123,8 @@
                 agricultural data
               </li>
               <li>Built maintainable and reusable components in Angular2+</li>
-              <li>Wrote unit tests to ensure reliability</li>
-              <li>Designed database schema based on client needs</li>
+              <li>Developed backend architecture in .NET Core</li>
+              <li>Designed database schema in MongoDB based on client needs</li>
               <li>
                 Consulted with sponsor to garner feedback and adapt to new
                 requirements
@@ -140,17 +139,18 @@
             <h1>Honors and Organizations</h1>
             <ul>
               <li>Dreamforce Speaker 2022–2023</li>
+              <li>Certified Salesforce Platform Developer</li>
+              <li>Certified Salesforce Javascript Developer</li></li>
               <li>Raikes Design Studio Platinum Project Member</li>
               <li>UNL Initialize Founding Member</li>
             </ul>
           </section>
           <section>
-            <h1>Skills</h1>
+            <h1>Skills and Experience</h1>
             <ul>
-              <li>Most experience with JavaScript, HTML, CSS</li>
-              <li>Experience with React, Vue, Svelte, and Express</li>
-              <li>Experience with PostgreSQL and MongoDB</li>
-              <li>Experience with Figma / Sketch</li>
+              <li>Languages: JavaScript/Typescript, HTML, CSS</li>
+              <li>Frameworks: React, Vue, Angular, Wordpress, Express</li>
+              <li>Tools: Figma, Sketch, Illustrator</li>
             </ul>
           </section>
         </div>
