--- a/pages/resume/resume.html
+++ b/pages/resume/resume.html
@@ -27,16 +27,14 @@
       <section class="content-section">
         <h1>Objective</h1>
         <p>
-          Obtain a full-time position in the web development field where I can
-          use my skills in software development, design, and user experience
-          with a focus on user experience and accessibility.
+          Obtain a full-time position in the software development field where I can
+          use my skills in software engineering, design, and user experience.
         </p>
       </section>
       <section class="content-section">
         <h1>Education</h1>
         <div>University of Nebraska – Lincoln</div>
-        <div>Bachelor of Science in Computer Science</div>
-        <div>GPA: 3.99 / 4.0</div>
+        <div>Bachelor of Science in Computer Science, with High Distinction</div>
       </section>
       <section class="content-section">
         <h1>Experience</h1>
@@ -53,6 +51,9 @@
               <li>
                 Developed accessible, responsive Lightning Web Components to meet client
                 needs
+              </li>
+              <li>
+                Implemented custom Apex controllers and triggers to support client requests
               </li>
               <li>
                 Collaborated on projects with teams across the US and overseas
@@ -126,10 +127,6 @@
               <li>Built maintainable and reusable components in Angular2+</li>
               <li>Wrote unit tests to ensure reliability</li>
               <li>Designed database schema based on client needs</li>
-              <li>
-                Consulted with sponsor to garner feedback and adapt to new
-                requirements
-              </li>
             </ul>
           </div>
         </div>
@@ -147,9 +144,9 @@
           <section>
             <h1>Skills and Certifications</h1>
             <ul>
-              <li>Experience with JavaScript, HTML, and CSS</li>
+              <li>Experience with JavaScript, Apex, HTML, and CSS</li>
               <li>Certified Salesforce Platform Developer, Salesforce Javascript Developer, Omnistudio Developer, and Marketing Cloud Personalization Accredited Professional</li>
-              <li>Experience with Lightning Web Components, React, and Express frameworks</li>
+              <li>Experience with Lightning Web Runtime, Lightning Web Components, Aura</li>
               <li>Experience with Figma</li>
             </ul>
           </section>
