--- a/pages/resume/resume.html
+++ b/pages/resume/resume.html
@@ -19,7 +19,7 @@
         <h1>Nathan Minchow</h1>
         <div class="contact-info">
           <span>nathan.minchow@outlook.com</span>
-          <span>nminchow.com</span>
+          <span>nathanminchow.com</span>
           <span>Atlanta, GA</span>
         </div>
         <div class="contact-info"></div>
