--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </p>
         <p class="cl-effect-7">
           I have extensive experience in web development at companies like
-          Garmin, Nelnet, and Bloomberg. More details are on my
+          Slalom, Garmin, and Nelnet. More details are on my
           <a target="_blank" href="doc/Nathan_Minchow_resume_2025.pdf">resume</a>.
         </p>
         <p>To see more of my work, take a look at my projects below.</p>
@@ -292,50 +292,6 @@
               class="project__image"
               src="img/todo.png"
               alt="Gradient todo screenshot"
-            />
-          </div>
-        </li>
-      </ol>
-    </div>
-    <div class="project-title-container">
-      <div class="text-container">
-        <h2 class="text">Showcase</h2>
-        <div role="presentation" class="bar bar--1"></div>
-        <div role="presentation" class="bar bar--2"></div>
-        <div role="presentation" class="bar bar--3"></div>
-        <div role="presentation" class="bar bar--4"></div>
-        <div role="presentation" class="bar bar--5"></div>
-        <div role="presentation" class="vertical-bar vertical-bar--left"></div>
-        <div
-          role="presentation"
-          class="vertical-bar vertical-bar--accent"
-        ></div>
-      </div>
-    </div>
-    <div class="content-container">
-      <ol class="project-list">
-        <li class="project-list__item project-list__item--wide">
-          <h3 class="project__title">WildRoots</h3>
-          <div class="image-container">
-            <div class="image-mouseover">
-              <div class="image-mouseover__column">
-                <p class="image-mouseover__description">
-                  Lead developer on a custom Wordpress implementation for Wild Roots People's Clinic.
-                </p>
-                <div class="image-mouseover__row">
-                  <a
-                    class="image-mouseover__link"
-                    href="https://wildrootspc.org/"
-                    target="_blank"
-                    >View Site</a
-                  >
-                </div>
-              </div>
-            </div>
-            <img
-              class="project__image"
-              src="img/wildrootspc.png"
-              alt="Werkweek screenshot"
             />
           </div>
         </li>
