--- a/pages/resume/resume.html
+++ b/pages/resume/resume.html
@@ -35,29 +35,74 @@
       <section class="content-section">
         <h1>Education</h1>
         <div>University of Nebraska – Lincoln</div>
-        <div>Bachelor of Science in Computer Science, with High Distinction</div>
+        <div>
+          Bachelor of Science in Computer Science, with High Distinction
+        </div>
       </section>
       <section class="content-section">
         <h1>Experience</h1>
         <div class="multicolumn">
           <div class="experience-container">
             <h2>
-              <span class="heavy-text">Senior Software Developer (UI and Frontend)</span> June 2019 –
-              Present
+              <span class="heavy-text"
+                >Senior Consultant - Software Engineer</span
+              >
+              September 2024 – Present
             </h2>
             <div>
-              <span class="italic-text">Mphasis Silverline</span> | Atlanta, Georgia
+              <span class="italic-text">Slalom</span> | Atlanta, Georgia
             </div>
             <ul>
               <li>
-                Led development teams across the US and overseas for client projects
+                Developed reusable Web Components to enhance
+                user experience and maintain compliance with accessibility
+                standards
+              </li>
+              <li>
+                Wrote performant, tested backend code to support scalable system
+                architecture
+              </li>
+              <li>
+                Collaborated with clients and stakeholders to gather, refine,
+                and document requirements
+              </li>
+              <li>
+                Estimated work and provided technical guidance to drive project
+                success
+              </li>
+              <li>
+                Led development efforts as a senior developer, architecting
+                solutions and fostering best practices by establishing standards
+              </li>
+            </ul>
+          </div>
+          <div class="experience-container">
+            <h2>
+              <span class="heavy-text"
+                >Senior Software Developer (UI and Frontend)</span
+              >
+              June 2019 – September 2024
+            </h2>
+            <div>
+              <span class="italic-text">Mphasis Silverline</span> | Atlanta,
+              Georgia
+            </div>
+            <ul>
+              <li>
+                Led development teams across the US and overseas for client
+                projects
               </li>
               <li>
                 Developed accessible, responsive Web Components to meet client
                 needs
               </li>
-              <li>Designed custom user interfaces and design systems in Figma</li>
-              <li>Streamlined design to development handoff process by establishing consistent design tokens and guidelines</li>
+              <li>
+                Designed custom user interfaces and design systems in Figma
+              </li>
+              <li>
+                Streamlined design to development handoff process by
+                establishing consistent design tokens and guidelines
+              </li>
               <li>
                 Developed, tested, and deployed client solutions in healthcare,
                 financial services, and media industries
@@ -76,11 +121,10 @@
                 localization processes
               </li>
               <li>Fixed bugs in company's fitness-tracking web solution</li>
+              <li>Ensured cross-browser compatibility in existing products</li>
               <li>
-                Ensured cross-browser compatibility in existing products
-              </li>
-              <li>
-                Conducted UX sessions to gather feedback on new and existing features
+                Conducted UX sessions to gather feedback on new and existing
+                features
               </li>
             </ul>
           </div>
@@ -108,29 +152,6 @@
               </li>
             </ul>
           </div>
-          <div class="experience-container">
-            <h2>
-              <span class="heavy-text">Software Developer</span> August 2017 –
-              May 2018
-            </h2>
-            <div>
-              <span class="italic-text">Raikes Design Studio</span> | Lincoln,
-              Nebraska
-            </div>
-            <ul>
-              <li>
-                Created web application to help visualize, manage, and utilize
-                agricultural data
-              </li>
-              <li>Built maintainable and reusable components in Angular2+</li>
-              <li>Developed backend architecture in .NET Core</li>
-              <li>Designed database schema in MongoDB based on client needs</li>
-              <li>
-                Consulted with sponsor to garner feedback and adapt to new
-                requirements
-              </li>
-            </ul>
-          </div>
         </div>
       </section>
       <section class="content-section">
@@ -140,17 +161,16 @@
             <ul>
               <li>Dreamforce Speaker 2022–2023</li>
               <li>Certified Salesforce Platform Developer</li>
-              <li>Certified Salesforce Javascript Developer</li></li>
+              <li>Certified Salesforce Javascript Developer</li>
               <li>Raikes Design Studio Platinum Project Member</li>
-              <li>UNL Initialize Founding Member</li>
             </ul>
           </section>
           <section>
             <h1>Skills and Experience</h1>
             <ul>
-              <li>Languages: JavaScript/Typescript, HTML, CSS</li>
-              <li>Frameworks: React, Vue, Angular, Wordpress, Express</li>
-              <li>Tools: Figma, Sketch, Illustrator</li>
+              <li>Languages: JavaScript/Typescript, HTML, CSS, C#, Java</li>
+              <li>Frameworks: Lightning Web Components, React, Vue, Angular, Wordpress, Express</li>
+              <li>Tools: Figma, Lucid, Jira, Azure, Git, Illustrator</li>
             </ul>
           </section>
         </div>
