--- a/pages/resume/resume.html
+++ b/pages/resume/resume.html
@@ -79,7 +79,7 @@
           <div class="experience-container">
             <h2>
               <span class="heavy-text"
-                >Senior Software Developer (UI and Frontend)</span
+                >Software Developer (UI and Frontend)</span
               >
               June 2019 – September 2024
             </h2>
